[tool.poetry]
name = "speed-typing-test"
version = "0.1.0"
description = ""
authors = ["Antibiotic <ofsposs@gmail.com>"]
readme = "README.md"
packages = [{include = "speed_typing_test"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
